# Filip_stex_project

./: CMakeLists.txt  README.md  key.conf
cmake/Modules/: cpprest_find_openssl.cmake
include/: API.h  App.h  Util.h  Websock.h
src/: API.cpp  App.cpp  Util.cpp  Websock.cpp  main.cpp
